Fix aim-container overflow

--- a/src/app/timespan-list/timespan-list.component.css
+++ b/src/app/timespan-list/timespan-list.component.css
@@ -15,5 +15,6 @@
 
 .aim-container {
     flex: 1 1 auto;
-    overflow: scroll;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
